Added offer section.

--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -7,7 +7,9 @@
 @import './app/reset';
 @import './app/typography';
 @import './app/layout';
+@import './app/button';
 
 // Theme assets.
 @import './app/page-header';
 @import './app/welcome';
+@import './app/offer';
