Added google fonts by @font-face.

--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -1,10 +1,7 @@
-// Google Fonts
-@import url(http://fonts.googleapis.com/css?family=Work+Sans:400,700&subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Poppins:400,500,700&subset=latin-ext);
-
 // Generic assets.
 @import './app/variables';
 @import './app/reset';
+@import './app/fonts';
 @import './app/typography';
 @import './app/layout';
 @import './app/button';
