--- a/assets/src/styles/app/fonts.scss
+++ b/assets/src/styles/app/fonts.scss
@@ -5,7 +5,7 @@
 	src:
 		local('Work Sans'),
 		local('WorkSans-Regular'),
-		url(http://fonts.gstatic.com/s/worksans/v2/WB2LNay3rHMH1zU8UJnUHKCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
+		url(//fonts.gstatic.com/s/worksans/v2/WB2LNay3rHMH1zU8UJnUHKCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
 }
 
 @font-face {
@@ -15,7 +15,7 @@
 	src:
 		local('Work Sans Bold'),
 		local('WorkSans-Bold'),
-		url(http://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmdqQynqKV_9Plp7mupa0S4g.ttf) format('truetype');
+		url(//fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmdqQynqKV_9Plp7mupa0S4g.ttf) format('truetype');
 }
 
 @font-face {
@@ -25,7 +25,7 @@
 	src:
 		local('Poppins'),
 		local('Poppins-Regular'),
-		url(http://fonts.gstatic.com/s/poppins/v1/rATt6MpBkxjRr3sy5fMEDg.ttf) format('truetype');
+		url(//fonts.gstatic.com/s/poppins/v1/rATt6MpBkxjRr3sy5fMEDg.ttf) format('truetype');
 }
 
 @font-face {
@@ -35,7 +35,7 @@
 	src:
 		local('Poppins Medium'),
 		local('Poppins-Medium'),
-		url(http://fonts.gstatic.com/s/poppins/v1/UGh2YG8gx86rRGiAZYIbVy3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
+		url(//fonts.gstatic.com/s/poppins/v1/UGh2YG8gx86rRGiAZYIbVy3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
 }
 
 @font-face {
@@ -45,5 +45,5 @@
 	src:
 		local('Poppins Bold'),
 		local('Poppins-Bold'),
-		url(http://fonts.gstatic.com/s/poppins/v1/aDjpMND83pDErGXlVEr-SS3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
+		url(//fonts.gstatic.com/s/poppins/v1/aDjpMND83pDErGXlVEr-SS3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
 }
