--- a/assets/src/styles/app/offer-more.scss
+++ b/assets/src/styles/app/offer-more.scss
@@ -17,21 +17,13 @@
 		a {
 			position: relative;
 			color: #76e1a6;
-			padding: 10px 0;
+			padding-bottom: 8px;
+			border-bottom: solid 1px rgba(118, 225, 166, .5);
+			transition: border-bottom-color .4s;
 
-			&:after {
-				content: '';
-				position: absolute;
-				height: 1px;
-				right: 0;
-				bottom: 2px;
-				left: 0;
-				background: #76e1a6;
-				opacity: .6;
-			}
-
-			&:hover:after {
+			&:hover {
 				opacity: 1;
+				border-bottom-color: #76e1a6;
 			}
 		}
 	}
