--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -5,9 +5,11 @@
 @import './app/typography';
 @import './app/layout';
 @import './app/button';
+@import './app/utils';
 
 // Theme assets.
 @import './app/page-header';
 @import './app/welcome';
 @import './app/offer';
 @import './app/offer-more';
+@import './app/gallery';
