--- a/assets/src/styles/app/contact.scss
+++ b/assets/src/styles/app/contact.scss
@@ -1,7 +1,15 @@
 .contact {
 	position: relative;
 	background: url(../images/bg-contact.svg) 100% 100% no-repeat;
-	padding-bottom: 30px;
+	padding: 100px 0 30px;
+
+	@media all and(max-width: 900px) {
+		padding-top: 70px;
+	}
+
+	@media all and(max-width: 450px) {
+		padding-top: 30px;
+	}
 
 	a {
 		&:hover {
@@ -19,7 +27,6 @@
 	}
 
 	.contact-data {
-		padding-top: 100px;
 		margin-left: 57%;
 
 		p {
@@ -152,10 +159,6 @@
 		.inner {
 			.contact-data {
 				width: 80%;
-
-				h2 {
-					padding-top: 70px;
-				}
 			}
 		}
 	}
