--- a/assets/src/styles/app/gallery.scss
+++ b/assets/src/styles/app/gallery.scss
@@ -75,7 +75,11 @@
 	}
 
 	@media all and(max-width: 1370px) {
-		padding: 100px 0 120px;
+		padding: 80px 0 140px;
+	}
+
+	@media all and(max-width: 1200px) {
+		padding-bottom: 50px;
 	}
 
 	@media all and(max-width: 1024px) {
@@ -156,8 +160,6 @@
 	}
 
 	@media all and(max-width: 568px) {
-		padding: 70px 0 100px;
-
 		h2 {
 			padding-bottom: 10px;
 		}
