--- a/assets/src/styles/app/rules.scss
+++ b/assets/src/styles/app/rules.scss
@@ -10,6 +10,12 @@
         h2 {
             padding-bottom: 20px;
         }
+
+		a {
+			&:hover {
+				text-decoration: underline;
+			}
+		}
     }
 
     ol {
