--- a/assets/src/styles/app/contact.scss
+++ b/assets/src/styles/app/contact.scss
@@ -128,7 +128,7 @@
 		background: url(../images/bg-contact-1200.svg) 100% 10% no-repeat;
 
 		.map {
-			position: static;
+			position: relative;
 			width: 100%;
 			height: 400px;
 		}
